--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyinstaller
+          pip install pyinstaller ruff pip-audit pytest
+
+      - name: Quality gates
+        run: |
+          ruff check src test
+          pytest -q
+          pip-audit
 
       - name: Build exe
         run: |
@@ -50,7 +56,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyinstaller
+          pip install pyinstaller ruff pip-audit pytest
+
+      - name: Quality gates
+        run: |
+          ruff check src test
+          pytest -q
+          pip-audit
 
       - name: Build mac binary
         run: |
