--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "inventory-sales-manager"
-version = "1.1.3"
+version = "1.1.4"
 description = "Inventory & Sales Manager (USD + ARS) with SQLite, Tkinter, Excel reports, FX rate"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -29,8 +29,10 @@ dependencies = [
   "openpyxl>=3.1.2",
 ]
 
-[project.url]
-github = "https://github.com/Lautarocuello98/Inventory-sales-manager"
+[project.urls]
+Homepage = "https://github.com/Lautarocuello98/Inventory-sales-manager"
+Repository = "https://github.com/Lautarocuello98/Inventory-sales-manager"
+Issues = "https://github.com/Lautarocuello98/Inventory-sales-manager/issues"
 
 [project.scripts]
 ism = "ism.main:main"
