--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ build/
 inventory_sales_manager.egg-info
 .pytest_cache
 release/
+
+# Local data / backups / keys
+*.db
+*.db.enc
+.backup.key
+backups/
+release/latest.json
